Refactor: implementación de arquitectura DTO y ResponseEntity